# daikin-matter

./: .gitignore  Cargo.toml  README.md  daikin-matter.env.example
.github/workflows/: release.yml
daikin-client/: Cargo.toml
daikin-client/examples/: compatibility_check.rs
daikin-client/src/: client.rs  discovery.rs
dsiot/: Cargo.toml
dsiot/src/: constraints.rs  lib.rs  state.rs  temperature.rs
dsiot/src/protocol/: info.rs  macros.rs  mod.rs  property.rs  request.rs  response.rs  status.rs
dsiot/src/types/: mode.rs  wind.rs
matter/: Cargo.toml
matter/src/: bridge.rs  fan_control.rs  main.rs  mdns.rs  power.rs  power_topology.rs  runtime.rs  thermostat.rs
packaging/deb/: daikin-matter.service
