[package]
name = "daikin-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Daikin AC network client library"
license.workspace = true
keywords = ["daikin", "hvac", "iot"]

[dependencies]
dsiot = { path = "../dsiot", version = "0.3.1" }
anyhow = "1.0"
reqwest = { version = "0.13.1", features = ["json"] }
serde_json = "1.0.149"
serde_qs = "1.1"
async-lock = "3.4.2"
tokio = { version = "1", features = ["net", "time"] }
async-stream = "0.3.6"
futures = "0.3"
network-interface = "2.0.5"
log = "0.4.29"

[dev-dependencies]
clap = { version = "4.6", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "get_status"

[[example]]
name = "compatibility_check"

[[example]]
name = "discovery"
