[package]
name = "dsiot"
version = "0.3.3"
edition = "2024"
authors = ["mzyy94"]
rust-version = "1.95"
description = "Daikin Smart IoT (dsiot) Protocol Library"
license = "GPL-3.0"
keywords = ["daikin", "dsiot", "iot"]

[features]
default = ["std"]
std = ["serde/std", "serde_json/std", "hex/std"]

[dependencies]
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
serde_repr = "0.1.20"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0.150", default-features = false, features = ["alloc"] }
libm = "0.2"

[dev-dependencies]
serde_qs = "1.1"
