[package]
name = "dsiot"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Daikin Smart IoT (dsiot) Protocol Library"
license.workspace = true
keywords = ["daikin", "dsiot", "iot"]

[features]
default = ["std"]
std = ["serde/std", "serde_json/std", "hex/std"]

[dependencies]
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
serde_repr = "0.1.20"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0.150", default-features = false, features = ["alloc"] }
libm = "0.2"

[dev-dependencies]
serde_qs = "1.1"
